--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,7 +1,6 @@
-if(TARGET Qt${QT_VERSION_MAJOR}::Widgets)
+#if(TARGET Qt${QT_VERSION_MAJOR}::Widgets)
     add_subdirectory(widget)
-    add_subdirectory(mainwindow)
-endif()
-if(TARGET Qt${QT_VERSION_MAJOR}::Quick)
+#endif()
+#if(TARGET Qt${QT_VERSION_MAJOR}::Quick)
     add_subdirectory(quick)
-endif()
+#endif()
